--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfólio-Luis-Trigueiro</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -73,7 +72,9 @@
                 </p>
             </div>
 
-            
+            <div id="profile">
+                <img id="profileImg" src="img/profile.png" alt="">
+            </div>
         </section>
 
         <section id="projects">
