--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                                 <img src="img/covid.png" class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <h5 class="card-title">Covid Live</h5>
-                                    <p class="card-text">Create using: Routes; Aixo; React Bootstrap; Components;
+                                    <p class="card-text">Created using: Routes; Aixo; React Bootstrap; Components;
                                         Props;</p>
                                     <a target="blank" href="https://luis-trigueiro.github.io/Covid/"
                                         class="btn btn-primary">See more</a>
@@ -99,7 +99,7 @@
                                 <img src="img/rick.png" class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <h5 class="card-title">Rick And Morty Profiles</h5>
-                                    <p class="card-text">Create using: Routes; Aixo; React Bootstrap; Components;
+                                    <p class="card-text">Created using: Routes; Aixo; React Bootstrap; Components;
                                         Props;</p>
                                     <a target="blank" href="https://luis-trigueiro.github.io/react-rick-morty-/"
                                         class="btn btn-primary">See more</a>
@@ -111,7 +111,7 @@
                                 <img src="img/bellajoux.png" class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <h5 class="card-title">Bellajoux Store</h5>
-                                    <p class="card-text">Create using: Prestashop; JavaScript;</p>
+                                    <p class="card-text">Created using: Prestashop; JavaScript;</p>
                                     <a target="blank" href="https://bellajoux.pt/" class="btn btn-primary">See more</a>
                                 </div>
                             </div>
@@ -123,7 +123,7 @@
                                 <img src="img/game.jpeg" class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <h5 class="card-title">Card title</h5>
-                                    <p class="card-text">Create using: Unity; C#</p>
+                                    <p class="card-text">Created using: Unity; C#</p>
                                     <a target="blank"
                                         href="https://play.google.com/store/apps/details?id=com.outsystemscloud.luistrigueiro.Dr.AntonioRibeiro"
                                         class="btn btn-primary">See more</a>
