--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
             <div id="titleName">
                 <h1>Luis Trigueiro</h1>
                 <h5>Full Stack Developer</h5>
-                <a href="#about">About Me</a>
-                <a href="#projects">Projects</a>
+                <a class="button" href="#about">About Me</a>
+                <a class="button" href="#projects">Projects</a>
                 <div class="logosTec">
                     <img id="react" src="img/react.png" alt="">
                     <img id="javascript" src="img/javascript.png" alt="">
