add css style and portifolio

--- a/index.html
+++ b/index.html
@@ -122,8 +122,20 @@
                             <div class="card" style="max-width: 18rem;">
                                 <img src="img/game.jpeg" class="card-img-top" alt="...">
                                 <div class="card-body">
-                                    <h5 class="card-title">Card title</h5>
-                                    <p class="card-text">Created using: Unity; C#</p>
+                                    <h5 class="card-title">Game Space Hungry</h5>
+                                    <p class="card-text">Created using: Unity Development Platform; C#;</p>
+                                    <a target="blank"
+                                        href="https://play.google.com/store/apps/details?id=com.outsystemscloud.luistrigueiro.Dr.AntonioRibeiro"
+                                        class="btn btn-primary">See more</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-12 col-md-4">
+                            <div class="card" style="max-width: 18rem;">
+                                <img src="img/website.png" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title">This Website</h5>
+                                    <p class="card-text">Created using: JavaScript; Bootstrap; HTML; CSS;</p>
                                     <a target="blank"
                                         href="https://play.google.com/store/apps/details?id=com.outsystemscloud.luistrigueiro.Dr.AntonioRibeiro"
                                         class="btn btn-primary">See more</a>
