--- a/index.html
+++ b/index.html
@@ -47,20 +47,20 @@
                 <a class="button" href="#about">About Me</a>
                 <a class="button" href="#projects">Projects</a>
                 <div class="logosTec">
-                    <img id="react" src="img/react.png" alt="">
-                    <img id="javascript" src="img/javascript.png" alt="">
-                    <img id="html" src="img/html.png" alt="">
-                    <img id="css" src="img/css.png" alt="">
+                    <img id="react" src="img/react.png" alt="react">
+                    <img id="javascript" src="img/javascript.png" alt="javascript">
+                    <img id="html" src="img/html.png" alt="html">
+                    <img id="css" src="img/css.png" alt="css">
                 </div>
             </div>
 
             <div class="contacts">
-                <a href="mailto:marquestrigueiro@gmail.com"><img id="mail" src="img/mail.png" alt=""></a>
+                <a href="mailto:marquestrigueiro@gmail.com"><img id="mail" src="img/mail.png" alt="send e-mail"></a>
                 <a target="_blank" href="https://api.whatsapp.com/send?phone=351920332386"> <img id="whats"
-                        src="img/whats.png" alt=""></a>
+                        src="img/whats.png" alt="send whatsapp messenger"></a>
                 <a target="_blank" href="https://www.linkedin.com/in/luis-eduardo-trigueiro/"><img id="linkedin"
-                        src="img/linkedin.png" alt=""></a>
-                <a target="_blank" href="https://github.com/Luis-Trigueiro"> <img id="git" src="img/git.png" alt=""></a>
+                        src="img/linkedin.png" alt="view linkedin profile"></a>
+                <a target="_blank" href="https://github.com/Luis-Trigueiro"> <img id="git" src="img/git.png" alt="viw git hub profile"></a>
             </div>
         </section>
 
@@ -74,7 +74,7 @@
             </div>
 
             <div id="profile">
-                <img id="profileImg" src="img/profile.png" alt="">
+                <img id="profileImg" src="img/profile.png" alt="profile image">
             </div>
         </section>
 
@@ -84,7 +84,7 @@
                     <div class="row">
                         <div class="col-sm-12 col-md-4">
                             <div class="card" style="max-width: 18rem;">
-                                <img src="img/covid.png" class="card-img-top" alt="...">
+                                <img src="img/covid.png" class="card-img-top" alt="covid live website image">
                                 <div class="card-body">
                                     <h5 class="card-title">Covid Live</h5>
                                     <p class="card-text">Created using: Routes; Aixo; React Bootstrap; Components;
@@ -96,7 +96,7 @@
                         </div>
                         <div class="col-sm-12 col-md-4">
                             <div class="card" style="max-width: 18rem;">
-                                <img src="img/rick.png" class="card-img-top" alt="...">
+                                <img src="img/rick.png" class="card-img-top" alt="Rick and Morty website image">
                                 <div class="card-body">
                                     <h5 class="card-title">Rick And Morty Profiles</h5>
                                     <p class="card-text">Created using: Routes; Aixo; React Bootstrap; Components;
@@ -108,7 +108,7 @@
                         </div>
                         <div class="col-sm-12 col-md-4">
                             <div class="card" style="max-width: 18rem;">
-                                <img src="img/bellajoux.png" class="card-img-top" alt="...">
+                                <img src="img/bellajoux.png" class="card-img-top" alt="Bellajoux store image">
                                 <div class="card-body">
                                     <h5 class="card-title">Bellajoux Store</h5>
                                     <p class="card-text">Created using: Prestashop; JavaScript;</p>
@@ -120,7 +120,7 @@
                     <div class="row">
                         <div class="col-sm-12 col-md-4">
                             <div class="card" style="max-width: 18rem;">
-                                <img src="img/game.jpeg" class="card-img-top" alt="...">
+                                <img src="img/game.jpeg" class="card-img-top" alt="Sapace hungry game image">
                                 <div class="card-body">
                                     <h5 class="card-title">Game Space Hungry</h5>
                                     <p class="card-text">Created using: Unity Development Platform; C#;</p>
@@ -132,7 +132,7 @@
                         </div>
                         <div class="col-sm-12 col-md-4">
                             <div class="card" style="max-width: 18rem;">
-                                <img src="img/website.png" class="card-img-top" alt="...">
+                                <img src="img/website.png" class="card-img-top" alt="this website image">
                                 <div class="card-body">
                                     <h5 class="card-title">This Website</h5>
                                     <p class="card-text">Created using: JavaScript; Bootstrap; HTML; CSS;</p>
