--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
                         src="img/whats.png" alt="send whatsapp messenger"></a>
                 <a target="_blank" href="https://www.linkedin.com/in/luis-eduardo-trigueiro/"><img id="linkedin"
                         src="img/linkedin.png" alt="view linkedin profile"></a>
-                <a target="_blank" href="https://github.com/Luis-Trigueiro"> <img id="git" src="img/git.png" alt="viw git hub profile"></a>
+                <a target="_blank" href="https://github.com/Luis-Trigueiro"> <img id="git" src="img/git.png"
+                        alt="view git hub profile"></a>
             </div>
         </section>
 
@@ -79,6 +80,7 @@
         </section>
 
         <section id="projects">
+            <h2>Projects</h2>
             <div>
                 <div class="container">
                     <div class="row">
