--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="shortcut icon" type="imagex/png" href="img/folder.png">
+    <meta property="og:image" content="www.luiseduardomarques.com/profile.png">
     <title>Portfólio-Luis-Trigueiro</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
