--- a/index.html
+++ b/index.html
@@ -4,13 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <link rel="shortcut icon" type="imagex/png" href="img/folder.png">
-    <meta property="og:image" content="www.luiseduardomarques.com/profile.png">
     <title>Portfólio-Luis-Trigueiro</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-
+    <meta property="og:image" content="https://luiseduardomarques.com/img/html.png">
 </head>
 
 <body>
