--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <meta property="og:image" content="https://luis-trigueiro.github.io/portifolio/img/profile.png">
+    <meta property="og:image:type" content="image/png">
 </head>
 
 <body>
@@ -47,7 +48,7 @@
                 <a class="button" href="#about">About Me</a>
                 <a class="button" href="#projects">Projects</a>
                 <div class="logosTec">
-                   
+                    <img id="react" src="img/react.png" alt="react">
                     <img id="javascript" src="img/javascript.png" alt="javascript">
                     <img id="html" src="img/html.png" alt="html">
                     <img id="css" src="img/css.png" alt="css">
