--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <meta property="og:image" content="https://luis-trigueiro.github.io/portifolio/img/game.jpeg">
     <meta property="og:image:type" content="image/jpeg">
+    <meta property="og:image:width" content="50">
+    <meta property="og:image:height" content="50">
 </head>
 
 <body>
