--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta property="og:image" content="https://luis-trigueiro.github.io/portifolio/img/game.jpeg">
+    <meta property="og:image" content="">
     <meta property="og:image:type" content="image/jpeg">
     <meta property="og:image:width" content="50">
     <meta property="og:image:height" content="50">
@@ -72,8 +72,10 @@
             <div id="text">
                 <h2>About Me</h2>
                 <p>
-                    If you are looking for an excited professional, who loves both speaking in
-                    public and programming, then you have reached the right profile.
+                    Professional with great logical thinking and ease of learning.
+                    Experienced, prepared and qualified for new challenges.
+                    I have experience with React, JavaScript, Node, C#, .Net, Java, PHP and others.
+                    I love learning everyday, testing my skills and solving problems.
                 </p>
             </div>
 
@@ -127,11 +129,8 @@
                             <div class="card" style="max-width: 18rem;">
                                 <img src="img/game.jpeg" class="card-img-top" alt="Sapace hungry game image">
                                 <div class="card-body">
-                                    <h5 class="card-title">Game Space Hungry</h5>
+                                    <h5 class="card-title">Mobile Game Space Hungry</h5>
                                     <p class="card-text">Created using: Unity Development Platform; C#;</p>
-                                    <a target="blank"
-                                        href="https://play.google.com/store/apps/details?id=com.outsystemscloud.luistrigueiro.Dr.AntonioRibeiro"
-                                        class="btn btn-primary">See more</a>
                                 </div>
                             </div>
                         </div>
@@ -141,6 +140,16 @@
                                 <div class="card-body">
                                     <h5 class="card-title">This Website</h5>
                                     <p class="card-text">Created using: JavaScript; Bootstrap; HTML; CSS;</p>
+                                    <a target="blank" href="/" class="btn btn-primary">See more</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-12 col-md-4">
+                            <div class="card" style="max-width: 18rem;">
+                                <img src="img/drantonio.webp" class="card-img-top" alt="this website image">
+                                <div class="card-body">
+                                    <h5 class="card-title">Mobile app</h5>
+                                    <p class="card-text">Created using: Flutter</p>
                                     <a target="blank"
                                         href="https://play.google.com/store/apps/details?id=com.outsystemscloud.luistrigueiro.Dr.AntonioRibeiro"
                                         class="btn btn-primary">See more</a>
