--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta property="og:image" content="">
+    <meta property="og:image" content="https://luis-trigueiro.github.io/portifolio/img/website.png">
     <meta property="og:image:type" content="image/jpeg">
     <meta property="og:image:width" content="50">
     <meta property="og:image:height" content="50">
