--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta property="og:image" content="https://luis-trigueiro.github.io/portifolio/img/website.png">
-    <meta property="og:image:type" content="image/jpeg">
+    <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="50">
     <meta property="og:image:height" content="50">
     <link rel="shortcut icon" type="imagex/png" href="img/folder.png">
@@ -72,10 +72,12 @@
             <div id="text">
                 <h2>About Me</h2>
                 <p>
-                    Professional with great logical thinking and ease of learning.
-                    Experienced, prepared and qualified for new challenges.
-                    I have experience with React, JavaScript, Node, C#, .Net, Java, PHP and others.
-                    I love learning everyday, testing my skills and solving problems.
+                    Dedicated and efficient Professional developer with great logical reasoning and experience in React,
+                    JavaScript, Node, C#, .Net, JavaScript, CSS, HTML, PHP, Front end and others, as well as CRMs.
+                    Experienced, prepared and qualified for new challenges. Besides that, I can hightlight project
+                    management, creative thinking and problem solving skills. Currently, I am living in Portugal, but
+                    relocating to Dublin in the upcoming weeks. Looking for remote or hybrid work opportunities where I
+                    can learn and contribute with the team and company objectives.
                 </p>
             </div>
 
