--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
                     Dedicated and efficient Professional developer with great logical reasoning and experience in React,
                     JavaScript, Node, C#, .Net, JavaScript, CSS, HTML, PHP, Front end and others, as well as CRMs.
                     Experienced, prepared and qualified for new challenges. Besides that, I can hightlight project
-                    management, creative thinking and problem solving skills. Currently, I am living in Portugal, but
-                    relocating to Dublin in the upcoming weeks. Looking for remote or hybrid work opportunities where I
+                    management, creative thinking and problem solving skills. I am currently living in Portugal, but I
+                    can be relocated to any country. Looking for remote or hybrid work opportunities where I
                     can learn and contribute with the team and company objectives.
                 </p>
             </div>
