--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
                     <img id="javascript" src="img/javascript.png" alt="javascript">
                     <img id="html" src="img/html.png" alt="html">
                     <img id="css" src="img/css.png" alt="css">
+                    <img id="java" src="img/java.png" alt="java">
                 </div>
             </div>
 
@@ -168,6 +169,21 @@
         <h2>Contact:</h2>
         <a href="mailto:marquestrigueiro@gmail.com">marquestrigeiro@gmail.com</a>
     </footer>
+
+    <div class="panel">
+        <div class="exit">x</div>
+        <div>
+            <p class="robotWelcome" style="margin-bottom: 0rem;"><span style="font-size: 14px;">🤖</span></br><b>Hello I'm DuduBot</b></p>
+            <p class="robotWelcome" style="animation-delay: 2.4s;"><b>How can I help you?</b></p>
+        </div>
+        <p id="questionUser"></p>
+        <p style="font-weight: bold;" id="bot"></p>
+        <div class="chatUser"><input class="chatInput" autocomplete="off" onchange="question()" id="question"
+                type="text"></div>
+
+    </div>
+
+    <img class="flip" src="img/chat.png" alt="chat">
 
     <script src="script.js"></script>
 
