--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta property="og:image:width" content="50">
     <meta property="og:image:height" content="50">
     <link rel="shortcut icon" type="imagex/png" href="img/folder.png">
-    <title>Portfólio-Luis-Trigueiro</title>
+    <title>Portfolio-Luis-Trigueiro</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
