--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="50">
     <meta property="og:image:height" content="50">
+    <meta name="description" content="Luis Trigueiro - Frontend Developer Portfolio showcasing React projects and contact.">
+    <meta name="author" content="Luis Trigueiro">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="imagex/png" href="img/folder.png">
     <title>Portfolio-Luis-Trigueiro</title>
     <link rel="stylesheet" href="style.css">
